# ShipAudit

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_fail_closed.py
backend/app/: __init__.py  main.py  models.py  schemas.py  worker.py
backend/app/api/: routes.py
backend/app/core/: config.py  security.py
backend/app/services/: __init__.py  address_normalization.py  anomaly.py  audit_engine.py  case_builder.py  data_cleanup.py  data_quality.py  dispute_adapters.py  ingestion.py  ledger.py  pdf_extraction.py  rate_cards.py  rule_repository.py  security.py  storage.py
backend/app/services/mappers/: __init__.py  base.py  charge_codes.py  fedex.py  fedex_pdf.py  ups.py  ups_billing_250.py
backend/data/carrier_rules/: rule_pack.json
backend/samples/: ups_headerless_invoice.csv
backend/scripts/: inspect_pdf.py
backend/tests/: conftest.py  test_audit_flow.py  test_audit_verdicts.py  test_carrier_mappers.py  test_data_cleanup.py  test_data_quality.py  test_fedex_pdf_mapper.py  test_pdf_extraction.py  test_rate_cards.py  test_rule_repository.py  test_strict_ingestion.py
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx
frontend/components/dashboard/: dashboard-view.tsx  evidence-viewer.tsx
frontend/lib/: api.ts  evidence-labels.ts  simple-markdown.tsx  utils.ts
samples/: sample_invoice.csv
(+9 files in other folders)
