[project]
name = "shipaudit-backend"
version = "0.1.0"
description = "Parcel invoice auditing and surcharge dispute backend"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13",
  "bcrypt>=4.1",
  "boto3>=1.34",
  "email-validator>=2.2",
  "fastapi>=0.115",
  "great-expectations>=1.3",
  "httpx>=0.27",
  "orjson>=3.10",
  "pandas>=2.2",
  "passlib[bcrypt]>=1.7",
  "psycopg[binary]>=3.2",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "python-jose[cryptography]>=3.3",
  "python-multipart>=0.0.9",
  "redis>=5.0",
  "rq>=1.16",
  "scikit-learn>=1.5",
  "sqlalchemy>=2.0",
  "tenacity>=8.3",
  "usaddress>=0.5",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
